Modification for Postgres

--- a/BPT/src/main/resources/application.properties
+++ b/BPT/src/main/resources/application.properties
@@ -1,6 +1,19 @@
+spring.main.banner-mode=off
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate=error
+
+spring.datasource.initialization-mode=always
+spring.datasource.platform=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/bpt_db
+
+spring.datasource.username=devmas
+spring.datasource.password=gn1ht3m0sdra4
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/admin/h2-console/
-spring.datasource.url=jdbc:h2:mem:testdb 
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.data.rest.basePath=/api
 spring.mvc.format.date=dd.MM.yyyy
+
